--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,11 @@
 
 </head>
 <body>
-    <h1>Aqui vamos  a hacer un blog del post</h1>
-    <p>Y este es el parrafo de uinicio</p>
+    <div id = "container">
+        <div id="post">
+        <h1>Aqui vamos  a hacer un blog del post</h1>
+        <p>Y este es el parrafo de uinicio</p>
+        </div>
+    </div>
 </body>
 </html>l
