--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,9 @@
         <div id="post">
         <h1>Aqui vamos  a hacer un blog del post</h1>
         <p>Y este es el parrafo de uinicio</p>
+        <p>
+            Los parrafaos son la mejor manera de compatir información
+        </p>
         </div>
     </div>
 </body>
