Modifique la cabecera y el color del texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id = "container">
-        <div id="cabecera">Hiperblog <span id="tagline">Tu blog de confianza</span>
+        <div id="cabecera">Hiperblog <span id="tagline">Tu blog de cabecera</span>
 
         </div>
         <div id="post">
