--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id = "container">
-        <div id="cabecera">Hiperblog <span id="tagline">Tu blog de confianza</span>
+        <div id="cabecera">Hiperblog <span id="tagline">Tu blog maestro</span>
 
         </div>
         <div id="post">
@@ -19,6 +19,7 @@
         <p>
             Los parrafaos son la mejor manera de compatir información
         </p>
+        <p>Suscribete y dale like</p>
         </div>
     </div>
 </body>
